--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
               기존의 웹사이트의 로고를 리뉴얼했고 레이아웃과 색상 등등을 수정했다. <br>
             </p>
             <button class="more"><a href="./IDI-Korea/index.html" class="more-link">MORE > </a></button>
+            <button class="more themore"><a href="./img/stroyboard.pdf" class="more-link">기획 > </a></button>
           </div>
         </div>
         <div class="article" id="arti2">
