--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
             <p class="article-comment"> 노원SBS아카데미 학원에서 피그마를 이용한 와이어프레임,프로토타입 활용 화면을 설계하고 <br>
               기존의 웹사이트의 로고를 리뉴얼했고 레이아웃과 색상 등등을 수정했다. <br>
             </p>
-            <button class="more"><a href="./IDI-Korea/index.html" class="more-link">MORE > </a></button>
-            <button class="more themore"><a href="./img/stroyboard.pdf" class="more-link">기획 > </a></button>
+            <button class="more"><a href="./IDI-Korea/index.html" class="more-link">MORE </a></button>
+            <button class="more themore"><a href="./img/stroyboard.pdf" class="more-link">기획 </a></button>
           </div>
         </div>
         <div class="article" id="arti2">
@@ -91,7 +91,7 @@
             <h3 class="article-name">클론 : SK TELECOM </h3>
             <p class="article-comment">대표적인 기업소개 사이트들 중에 선벌하여 해당 사이트의 코드를 분석한 후에 클론작업을 진행했다.
             </p>
-            <button class="more"><a href="./SK-Telecom/index.html" class="more-link">MORE > </a></button>
+            <button class="more"><a href="./SK-Telecom/index.html" class="more-link">MORE </a></button>
           </div>
           <img class="thumbnail" id="thumn2" src="./img/SK Telecom.png">
         </div>
@@ -101,7 +101,8 @@
       <h3 class="contact">bin1018119@gmail.com</h3>
       <div class="links">
         <a class="github" href="https://github.com/binhub97" target="_blank">GITHUB</a>
-        <a class="notion" href="#" target="_blank">RESUME</a>
+        <a class="notion" href="https://zenith-fox-d2b.notion.site/1a391ab4b94b80eba99ec72b0d108027?pvs=4"
+          target="_blank">RESUME</a>
       </div>
       <p>저에게 궁금한 점이 있으시다면 연락해 주세요. </p>
     </footer>
