--- a/SK-Telecom/index.html
+++ b/SK-Telecom/index.html
@@ -12,7 +12,6 @@
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"
     integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-  <script src="./js/common.js"></script>
 
 <body>
   <header>
@@ -86,6 +85,21 @@
     </div>
     <div class="swiper-pagination"></div>
   </div>
+  <script>
+    var swiper = new Swiper(".mySwiper", {
+      slidesPerView: 1,
+      spaceBetween: 30,
+      loop: true,
+      pagination: {
+        el: ".swiper-pagination",
+        clickable: true,
+      },
+      autoplay: {
+        delay: 2500,
+        disableOnInteraction: false,
+      }
+    });
+  </script>
   <!-- main -->
   <main>
     <div class="mainimg-inner">
