--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <a class="notion" href="https://zenith-fox-d2b.notion.site/1a391ab4b94b80eba99ec72b0d108027?pvs=4"
           target="_blank">RESUME</a>
       </div>
-      <p>저에게 궁금한 점이 있으시다면 연락해 주세요. </p>
+      <p>Thank you For Watching </p>
     </footer>
   </div>
 </body>
