--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <footer id="footer">
       <h3 class="contact">bin1018119@gmail.com</h3>
       <div class="links">
-        <a class="github" href="https://github.com/binhub97" target="_blank">GITHUB</a>
+        <a class="github" href="https://github.com/bincode97" target="_blank">GITHUB</a>
       </div>
       <p>Thank you For Watching </p>
     </footer>
